--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@
 <body>
   <main>
     <div class="card">
-    Sedans
-    Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-    or on your next road trip.
+    <img src="images/icon-sedans.svg" alt="sedan icon">
+    <h2>Sedans</h2>
+    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+    or on your next road trip. </p>
+    <button>Learn More</button>
     </div>
     <div class="card">
-    SUVs
-    Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-    and off-road adventures.
+    <img src="images/icon-suvs.svg" alt="sedan icon">
+    <h2>SUVs</h2>   <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+    and off-road adventures.</p>
+    <button>Learn More</button>
     </div>
     <div class="card">
-    Luxury
-    Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-    rental and arrive in style.
+    <img src="images/icon-luxury.svg" alt="sedan icon">
+    <h2>Luxury</h2>
+    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+    rental and arrive in style.</p>
+    <button>Learn More</button>
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
